03-ia/k8s/02_app/02-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-chat-web
  namespace: ai-rag
spec:
  selector:
    app: ai-chat-web
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-chat-web
  namespace: ai-rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-chat-web
  template:
    metadata:
      labels:
        app: ai-chat-web
    spec:
      serviceAccountName: ai-rag-sa

      # Blindaje: evita variables auto-inyectadas por Services
      enableServiceLinks: false

      # Evita CrashLoop: espera a que Chroma esté arriba antes de arrancar Gunicorn/Flask
      containers:
        - name: web
          image: 084375558336.dkr.ecr.us-east-1.amazonaws.com/chroma-chat-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
